[gd_scene load_steps=7 format=3 uid="uid://ca1dlcv0wq1f4"]

[ext_resource type="Script" path="res://scene/credit.gd" id="1_5snkl"]
[ext_resource type="Shader" path="res://scene/Credit.gdshader" id="1_g8yeg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6lvr1"]
shader = ExtResource("1_g8yeg")
shader_parameter/screen_size = Vector2(500, 250)

[sub_resource type="Animation" id="Animation_o0003"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasGroup/RichTextLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -540)]
}

[sub_resource type="Animation" id="Animation_46aq2"]
resource_name = "credit"
length = 15.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasGroup/RichTextLabel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 15.5, 27),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 785), Vector2(0.425926, 24.3518), Vector2(0, -540)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxf08"]
_data = {
"RESET": SubResource("Animation_o0003"),
"credit": SubResource("Animation_46aq2")
}

[node name="Credit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5snkl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -354.0
offset_top = -218.0
offset_right = 606.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_6lvr1")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasGroup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.425926
offset_top = 24.3518
offset_right = 960.426
offset_bottom = 564.352
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]
[font_size=40]Credit[/font_size]
[font_size=25]
[b] Game, Level Designer[/b]: zunyu_verse
[b] Art[/b]: rs37153889
[b] Program[/b]: DennisFan
[b] Program[/b]: XX
[/font_size]




[font_size=96]Thanks for playing[/font_size]
[/center]
"
scroll_active = false

[node name="CanvasLayer_CanvasGroup_RichTextLabel#TitleButton" type="Button" parent="CanvasGroup/RichTextLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 329.0
offset_top = 292.0
offset_right = -338.0
offset_bottom = -185.0
theme_override_font_sizes/font_size = 40
text = "   BackToTitle   "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kxf08")
}
autoplay = "credit"

[connection signal="meta_clicked" from="CanvasGroup/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="button_down" from="CanvasGroup/RichTextLabel/CanvasLayer_CanvasGroup_RichTextLabel#TitleButton" to="." method="_on_title_button_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
